# awesome-csm-1b

./: README.md
src/audio-book-creator/: README.md  app.py  pyproject.toml  requirements.txt  ui.py
src/audio-book-creator/data/books/: fcf2f7e6-10cc-4787-aadf-be075f19180c.json  fcf2f7e6-10cc-4787-aadf-be075f19180c.txt
src/emotion-based-voice-generator/: README.md
src/multilingual-accent-tool/: README.md
src/personal-voice-diary/: README.md
src/story-narrator-for-children/: README.md
src/voice-based-social-media-post-creator/: README.md
src/voice-message-creator/: README.md
src/voice-style-transfer/: README.md
