[project]
name = "audio-book-creator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.11",
    "huggingface-hub==0.28.1",
    "moshi==0.2.2",
    "nltk>=3.9.1",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.20",
    "silentcipher",
    "streamlit>=1.43.2",
    "tokenizers==0.21.0",
    "torch==2.4.0",
    "torchao==0.9.0",
    "torchaudio==2.4.0",
    "torchtune==0.4.0",
    "transformers==4.49.0",
    "uvicorn>=0.34.0",
]

[tool.uv.sources]
silentcipher = { git = "https://github.com/SesameAILabs/silentcipher", rev = "master" }
